--- a/documentation/FinalYearProjectReport.tex
+++ b/documentation/FinalYearProjectReport.tex
@@ -1,4 +1,4 @@
-% Created 2020-10-21 Wed 13:37
+% Created 2020-10-21 Wed 14:17
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -28,9 +28,9 @@
 
 
 \section{Introduction - due in 30/10/2020}
-\label{sec:org91f22fa}
+\label{sec:orgb2e17d7}
 \subsection{Problem Statement}
-\label{sec:org1bb03ea}
+\label{sec:org711c892}
 
 In the world of computer science, and computer programming in general, there is an abundance of learning materials freely available from which students can learn how to program, how to use a certain programming language, how to use a framework for that language, etc.. One area of study that is not as well developed in terms of learning materials is compiler design. It would be unfair to say that there is nothing for a beginner to make use of, however these resources have a tendency to ignore or gloss over the gory details, advising that tools are used to generate complex parts of the compiler for them. 
 
@@ -41,28 +41,28 @@ This is the problem. There is an absence of material that shows the learner that
 In order to rectify this problem, I propose the following: 
 
 \subsection{Product Description}
-\label{sec:orgcb9fbf3}
+\label{sec:org2dd5908}
 
 The product that I will produce at the end of this project is a compiler for a general purpose programming language of my own creation. The compiler will be able to compile a program written in said programming language into assembly language targeting the x86 CPU architecture. The compiler will be written in a modular, easily understandable way using the Java programming language. It will be written in this way to encourage learning about the various stages of compilation. 
 
 \subsection{Users or Audience}
-\label{sec:orgf394fb9}
+\label{sec:org9feb90b}
 
 The users that I imagine would be interested in this project would be anyone who is interested in the inner workings of a compiler, and how they could go about creating their own compiler without leaning on other available tools. As compiler design is quite a technical subject, I would expect that the users of this project would be at university level or equivalent in terms of their education in computer science or programmming.
 
 \section{Background Research - due in 7/12/2020}
-\label{sec:orgcfa9723}
+\label{sec:org6e703a0}
 \subsection{Necessary Background Material}
-\label{sec:orgfae74c3}
+\label{sec:org8d05ee3}
 \subsection{Related Work}
-\label{sec:org50dad7d}
+\label{sec:org15bfe88}
 \subsection{Professional, Legal, Ethical \& Social Issues}
-\label{sec:org6f66e88}
+\label{sec:org7d016a0}
 
 \section{MISC}
-\label{sec:org0e78979}
+\label{sec:org49a0abf}
 
 \subsection{comments}
-\label{sec:org2040a1e}
+\label{sec:orga56d3a0}
 Inline comments within the source code will be kept to a minimum, this is done to prevent noise when reading the source code. An overview of the structure of the program will be stored in the README.org file found at the root of the project.
 \end{document}
